--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,46 @@
+:root{
+    --background-color: #1e293b;
+    --text-color: #93c5fd;
+}
 body{
     text-align: center;
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 
 label{
     display: block;
     padding: 1rem;
+    border: 1px solid;
+    margin: 0.5rem;
 }
+
+.container{
+    display: block;
+    border: 1px solid;
+    width: 50%;
+    margin: auto;
+}
+
+.heading{
+    border: 1px solid;
+    margin: 1rem;
+    padding: 0.5rem;
+}
+
+#evaluate-btn{
+    width: 20%;
+    margin: 0.5rem;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
+    cursor: pointer;
+}
+
+#output{
+    margin: 0.5rem;
+    border: 1px dotted;
+    padding: 0.5rem;
+}
+
+
