--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body{
     text-align: center;
     background-color: var(--background-color);
     color: var(--text-color);
+    margin: 0px;
 }
 
 label{
@@ -43,4 +44,33 @@ label{
     padding: 0.5rem;
 }
 
+.footer .link{
+    cursor: pointer;
+}
+
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-item-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+
+.footer-heading{
+    font-size: large;
+    font-weight: bold;
+}
+
+.footer ul{
+    padding-inline-start: 0.5rem;
+}
+.footer{
+    background-color: var(--text-color);
+    color: #1e293b;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
 
